Added credits to notebook for assignment 2

--- a/assignment2-weather.ipynb
+++ b/assignment2-weather.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "# assignment2-weather\n",
+    "| Author  | Student ID  | Term  |  \n",
+    "|----------|---------|---------|---------|  \n",
+    "| David O'Connell  | G00438912  | 2H 2024  |  \n",
     "\n",
     "## Problem Statement\n",
     "Create a jupyter notebook called assignment2-weather.ipynb that has a nice plot of the temperature over time \n",
@@ -16,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +380,7 @@
        "[8 rows x 24 columns]"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
