Updated notebook with summary table

--- a/assignment2-weather.ipynb
+++ b/assignment2-weather.ipynb
@@ -4,22 +4,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# assignment2-weather\n",
-    "| Author  | Student ID  | Term  |  \n",
-    "|----------|---------|---------|---------|  \n",
-    "| David O'Connell  | G00438912  | 2H 2024  |  \n",
-    "\n",
+    "# assignment2-weather"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Topic | Details |\n",
+    "|---------|-------------|\n",
+    "| **Module:**  | 4369 - Programming for Data Analytics  |\n",
+    "| **Lecturer:**  | Andrew Beatty  | \n",
+    "| **Year/Semester:**  | Year 1 / Semester 2  |\n",
+    "| **Author:**  | David O'Connell  |\n",
+    "| **Student ID:**  | G00438912  |\n",
+    "| **Student Email:**  | G00438912@atu.ie  |  \n",
+    "   \n",
+    "****"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Problem Statement\n",
     "Create a jupyter notebook called assignment2-weather.ipynb that has a nice plot of the temperature over time \n",
     "(\"dryBulbTemperature_Celsius\").  \n",
     "\n",
     "## Assumptions\n",
-    "There is no field directly representing the time. We will use the *localReportEndDateTime* field.  \n"
+    "There is no field directly representing the time. We will use the *localReportEndDateTime* field.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +398,7 @@
        "[8 rows x 24 columns]"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
