--- a/assignment3-pie.ipynb
+++ b/assignment3-pie.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "4       Biomedical engineer  "
       ]
      },
-     "execution_count": 194,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "1000"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "Name: Domain, dtype: object"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,13 +311,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Email Domain Plot\n",
-    "Following is the code associated with drawing the plot, and the resulting plot itself."
+    "## Email Domains - Pie Chart of Relative Occurrences\n",
+    "Following is the code associated with drawing the pie chart of the frequency of occurrence of the various email domains, and the resulting plot itself."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -335,9 +335,11 @@
     "# Offset parameters for the segments\n",
     "explode=[0.05, 0.05, 0.05]\n",
     "\n",
-    "# Create the pie chart, turn off the labels add a legend instead (positioned outside the pie chart)\n",
-    "df['Domain'].value_counts().plot.pie(ylabel='',labels=None,title='Domain Occurrences',autopct='%1.1f%%',explode=explode)\n",
+    "# Create the pie chart, explode the slices and turn off the labels \n",
+    "df['Domain'].value_counts().plot.pie(ylabel='',labels=None,title='Domain Occurrences',\n",
+    "                                     autopct='%1.1f%%',explode=explode)\n",
     "\n",
+    "# Add a legend instead of the labels (positioned outside the pie chart)\n",
     "plt.legend(bbox_to_anchor=(1, 0.6), loc='upper left',labels=df['Domain'])\n",
     "\n",
     "# Size the plot so it doesn't overlap with the legend\n",
