Assignment 3 update, use file from the web

--- a/assignment03-pie.ipynb
+++ b/assignment03-pie.ipynb
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -335,13 +335,13 @@
    ],
    "source": [
     "# Offset parameters for the segments\n",
-    "explode=[0.05, 0.05, 0.05]\n",
+    "expl=[0.05, 0.05, 0.05]\n",
     "\n",
     "summary = df['Domain'].value_counts()\n",
     "\n",
     "# Create the pie chart, explode the slices and turn off the labels \n",
     "summary.plot.pie(ylabel='',labels=summary[:],title='Domain Occurrences',\n",
-    "                                     autopct='%1.1f%%',explode=explode)\n",
+    "                                     autopct='%1.1f%%',explode=expl)\n",
     "\n",
     "# Add a legend instead of the labels (positioned outside the pie chart)\n",
     "plt.legend(bbox_to_anchor=(1, 0.6), loc='upper left',labels=summary.index)\n",
